--- a/API connect.ipynb
+++ b/API connect.ipynb
@@ -13,7 +13,7 @@
    "id": "4a011434-6788-41d2-85ae-40eb8da4a8d9",
    "metadata": {},
    "source": [
-    "*Connecting to the API / Server*"
+    "**Connecting to the API / Server**"
    ]
   },
   {
@@ -162,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mlops",
    "language": "python",
    "name": "python3"
   },
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
